--- a/src/components/weather/input/index.css
+++ b/src/components/weather/input/index.css
@@ -1,5 +1,5 @@
 .input {
-    border: 1px solid aqua;
+    border: 1px solid red;
     border-radius: 20px;
     height: 30px;
     text-align: center;
